una prueba con GIT

--- a/primero.html
+++ b/primero.html
@@ -26,6 +26,9 @@
         <a href_blank="https://hub.docker.com/_/mongo">Esto es una lista</a>
         <li>elemento uno</li>
     </form>
+    <form action="https://hub.docker.com/_/mongo" method="get">
+        <input type="text" name="nombre" placeholder="Nombre">
+        <input type="submit" value="Enviar">
     
 </body>
 </html>
